fix(playground): avoid scrollbar in queue list

--- a/client/src/playground/queue/index.scss
+++ b/client/src/playground/queue/index.scss
@@ -104,7 +104,7 @@
     > ul {
       margin: 0 0 0.5rem;
       max-height: 50vh;
-      overflow: scroll;
+      overflow: auto;
       width: 100%;
 
       > li {
